turmites.lessons.turmites.helloturmite.HelloTurmite.scala.error
Turmite:25: error: type mismatch;
 found   : Int
 required: java.awt.Color
  paint(rule(state)(nbcolor)(0))
                            ^Turmite:31: error: Int does not take parameters
    case gauche => gauche()
                         ^Turmite:33: error: Int does not take parameters
    case droite => droite()
                         ^